--- a/feature/constraint/pkg/build.gradle
+++ b/feature/constraint/pkg/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     api project(':lib:baseArch')
     api project(':feature:constraint:export')
     kapt Config.aRouter_compiler
+    kapt Config.autoServiceAnnotations
 }
