feat: AGP增量编译优化

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
 
     }
     dependencies {
@@ -17,6 +17,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath "com.alibaba:arouter-register:$arouter_register_version"
+        classpath "com.github.wuyr.incrementalcompiler:plugin:1.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -51,6 +52,7 @@ allprojects {
 }
 
 subprojects {
+    apply plugin: 'com.github.wuyr.incrementalcompiler'
     configurations.all {
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             if (details.requested.group == 'androidx.fragment') {
