--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath "com.alibaba:arouter-register:$arouter_register_version"
         classpath "com.github.wuyr.incrementalcompiler:plugin:1.0.0"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -56,10 +57,10 @@ subprojects {
     configurations.all {
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             if (details.requested.group == 'androidx.fragment') {
-                details.useVersion "1.3.5"
+                details.useVersion "1.4.0"
             }
             if (details.requested.group == 'androidx.core' && details.requested.name=='core') {
-                details.useVersion "1.6.0"
+                details.useVersion "1.7.0"
             }
             if (details.requested.group == 'androidx.lifecycle') {
                 if(details.requested.name =='lifecycle-livedata' || details.requested.name =='lifecycle-common'
@@ -70,7 +71,7 @@ subprojects {
                 details.useVersion "1.2.0"
             }
             if (details.requested.group == 'androidx.core' && details.requested.name=='core-ktx') {
-                details.useVersion "1.6.0"
+                details.useVersion "1.7.0"
             }
             if (details.requested.group == 'androidx.arch.core' && details.requested.name=='core-common') {
                 details.useVersion "2.1.0"
