--- a/feature/sample/app/build.gradle
+++ b/feature/sample/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply from: "../../../buildCommon.gradle"
-
+apply  plugin: "dagger.hilt.android.plugin"
 android {
     defaultConfig {
         applicationId "me.module.sample"
@@ -18,5 +18,6 @@ dependencies {
     api project(':feature:mock')
     kapt Config.aRouter_compiler
 
-
+    implementation 'com.google.dagger:hilt-android:2.40.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.40.1'
 }
