--- a/feature/sample/app/build.gradle
+++ b/feature/sample/app/build.gradle
@@ -18,6 +18,6 @@ dependencies {
     api project(':feature:mock')
     kapt Config.aRouter_compiler
 
-    implementation 'com.google.dagger:hilt-android:2.40.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.40.1'
+    implementation  Config.hilt
+    kapt  Config.hiltCompile
 }
