--- a/feature/sample/pkg/build.gradle
+++ b/feature/sample/pkg/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.40.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.40.1'
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0'
+    //implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0'
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
 }
