--- a/feature/compose/app/src/main/AndroidManifest.xml
+++ b/feature/compose/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.compose.app">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".ComposeApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,6 +17,11 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Scaffold.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
