--- a/feature/compose/pkg/build.gradle
+++ b/feature/compose/pkg/build.gradle
@@ -1,10 +1,48 @@
-apply plugin: 'com.android.library'
-apply from: "../../../buildCommon.gradle"
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
 
+android {
+    compileSdkVersion 30
+
+    defaultConfig {
+        minSdk 21
+        targetSdk 30
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+        useIR = true
+    }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion '1.5.21'
+    }
+}
 
 dependencies {
-    api project(':feature:sample:pkg')
-    api project(':feature:mock')
-    kapt Config.aRouter_compiler
-
+    implementation "androidx.compose.ui:ui:$compose_version"
+    api Config.autoService
+    annotationProcessor Config.autoServiceAnnotations
 }
