--- a/feature/compose/app/build.gradle
+++ b/feature/compose/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08"
     api (project(':feature:compose:pkg'))
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha06'
-    implementation "com.google.accompanist:accompanist-glide:0.12.0"
+    implementation 'io.coil-kt:coil-compose:1.3.0'
     implementation "com.google.accompanist:accompanist-pager:0.12.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.12.0"
     api Config.autoService
