--- a/feature/constraint/pkg/build.gradle
+++ b/feature/constraint/pkg/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     api project(':feature:constraint:export')
     kapt Config.aRouter_compiler
     kapt Config.autoServiceAnnotations
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 }
