--- a/lib/baseArch/src/main/AndroidManifest.xml
+++ b/lib/baseArch/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application>
         <provider
-            android:name=".contentProvider.MyContentProvider"
+            android:name=".contentProvider.BaseArchContentProvider"
             android:authorities="${applicationId}.MyContentProvider"
             android:exported="false"
             android:multiprocess="true" />
