--- a/feature/mock/build.gradle
+++ b/feature/mock/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     api Config.appcompat
     kapt Config.aRouter_compiler
     api project(':feature:constraint:export')
+    api project(':feature:sample:export')
 }
