--- a/lib/statusBar/build.gradle
+++ b/lib/statusBar/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: "com.android.library"
+plugins { id 'com.android.library' }
 apply from: "../../buildCommon.gradle"
 
 dependencies {
-    api Config.liveData
-    api Config.appcompat
+    api libs.liveData
+    api libs.appcompat
 
 }
