--- a/lib/webview/build.gradle
+++ b/lib/webview/build.gradle
@@ -4,11 +4,11 @@ apply from: "../../buildCommon.gradle"
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    api Config.constraintlayout
-    api Config.kotlin
-    api Config.coreKtx
-    api Config.appcompat
-    api Config.aRouter
-    kapt Config.aRouter_compiler
+    api libs.constraintlayout
+    api libs.kotlin
+    api libs.coreKtx
+    api libs.appcompat
+    api libs.arouter
+    kapt libs.aroutercompiler
     api project(':lib:statusBar')
 }
