--- a/feature/sample/pkg/build.gradle
+++ b/feature/sample/pkg/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply from: "../../../buildCommon.gradle"
-apply  plugin: "dagger.hilt.android.plugin"
+
 
 android {
     sourceSets {
@@ -18,12 +18,12 @@ dependencies {
     api project(':lib:webview')
     api project(':lib:statusBar')
     api project(':feature:sample:export')
-    api Config.epic
-    api Config.material
-    api Config.viewpager2
+    api libs.epic
+    api libs.material
+    api libs.viewpager2
 
-    kapt Config.autoServiceAnnotations
-    kapt Config.aRouter_compiler
+    kapt libs.autoServiceAnnotations
+    kapt libs.aroutercompiler
 
 
     implementation 'com.google.android.gms:play-services-location:18.0.0'
